# LifeGame

./: CMakeLists.txt  README.md  cellule.cpp  class.h  game.cpp  ihm.cpp  main.cpp
headers/: class.h
libs/: README_libs.md
src/: cellule.cpp  game.cpp  ihm.cpp  main.cpp
